# Datapilot-AI

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
core/: __init__.py  chat.py  edit_copilot.py  forecasting.py  insights.py  kpis.py  loader.py  profiler.py  quality.py  report.py  visualizer.py
data/samples/: sample_sales.csv
datapilot/: __init__.py  __main__.py  cli.py
datapilot_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: helpers.py
