[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "datapilot-ai"
version = "0.1.0"
description = "Universal CSV & Excel Intelligence Platform (Streamlit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.31",
  "pandas>=2.1",
  "numpy>=1.26",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "openpyxl>=3.1",
  "charset-normalizer>=3.3",
  "numexpr>=2.8",
  "openai>=1.12",
]

[project.scripts]
datapilot = "datapilot.cli:main"

[tool.setuptools]
packages = ["datapilot", "core", "utils"]
